Fixed the lines issues on Tablet screen

--- a/style.css
+++ b/style.css
@@ -76,6 +76,11 @@ p {
   margin: 24px 0px;
 }
 
+.paragraphSpacing {
+  display: inline-block;
+  margin: 12px 0px 0px 0px;
+}
+
 .page-section {
   display: flex;
   flex-direction: column;
@@ -469,7 +474,7 @@ p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 700px;
+  margin-top: 620px;
   /* z-index: 0; */
 }
 
